<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/imageView4"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="1.0"
            android:contentDescription="@string/beginnerballerbg"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView2"
            android:scaleType="fitCenter" android:contentDescription="@string/background_image"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView5" android:textColor="#FFFFFF" android:fontFamily="@font/montserrat"
            android:textSize="18sp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="#FFFFFF" android:textOn="@string/beginner"
                android:textOff="@string/beginner" android:layout_marginEnd="16dp"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton4" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="#FFFFFF" android:textOn="@string/baller"
                android:textOff="@string/baller" android:layout_marginStart="16dp"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:textColor="#FFFFFF" android:fontFamily="@font/montserrat"
            android:background="@drawable/swoosh_button"/>

</android.support.constraint.ConstraintLayout>